Bug 499384 - Placeholder descriptions are not translated
Summary: Placeholder descriptions are not translated
Status: RESOLVED FIXED
Alias: None
Product: Spectacle
Classification: Applications
Component: General (other bugs)
Version First Reported In: unspecified
Platform: Other Other
: NOR normal
Target Milestone: ---
Assignee: Noah Davis
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2025-02-01 13:51 UTC by Emir SARI
Modified: 2025-02-08 01:10 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.4.0
Sentry Crash Report:


Attachments
screenshot (347.75 KB, image/png)
2025-02-01 13:51 UTC, Emir SARI
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Emir SARI 2025-02-01 13:51:39 UTC
Created attachment 177883 [details]
screenshot

KDE neon, latest Unstable, tr_TR locale.

See screenshot. These were translated at some point if I recall right.
Comment 1 Bug Janitor Service 2025-02-06 20:33:15 UTC
A possibly relevant merge request was started @ https://invent.kde.org/graphics/spectacle/-/merge_requests/438
Comment 2 Noah Davis 2025-02-06 21:18:20 UTC
Git commit 16bed136325f389abed0c26e47d85e9262304f91 by Noah Davis.
Committed on 06/02/2025 at 20:33.
Pushed by ndavis into branch 'master'.

Fix filename template placeholder description translation support

M  +30   -35   src/ExportManager.cpp

https://invent.kde.org/graphics/spectacle/-/commit/16bed136325f389abed0c26e47d85e9262304f91