Fix filename template placeholder description translation support

BUG: 499384